--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </div> 
         <div class="col-sm-6 col-md-4 adipiscing">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/pet.me.pdf" title="pet.me" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/petme.pdf" title="pet.me" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
@@ -133,7 +133,7 @@
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/pet.me.png" class="img-responsive" alt="pet.me"> </a> </div>
+              <img src="img/portfolio/petme.png" class="img-responsive" alt="petme"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 lorem">
