--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
         <div class="col-sm-6 col-md-4 lorem">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/LM.pdf" title="Liberty Mutual" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/Privacy.pdf" title="Liberty Mutual" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
