--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@
         </div>
         <div class="col-sm-6 col-md-4 lorem">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/Privacy.pdf" title="Liberty Mutual" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/SandC.pdf" title="Sales and Compensation Tool" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>Liberty Mutual</h4>
-                    <h4>I was the UX lead for the Rejected Transactions screen for Comp 2.0, a Liberty Mutual tool.</h4>
+                    <h4>Sales and Compensation Tool</h4>
+                    <h4>I was the UX lead for an internal sales and compensation tool.</h4>
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/LM.png" class="img-responsive" alt="Liberty Mutual"> </a> </div>
+              <img src="img/portfolio/SandC.png" class="img-responsive" alt="Sales and Compensation Tool"> </a> </div>
           </div>
         </div>
     </div>
