--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
     <div class="col-md-6">
       <div class="section-title">
         <div class="row"> <img src="img/about.jpg" class="img-responsive pull-left" alt="">
-          <p>I am a UX Designer and Tufts CS alum with almost 2 years of professional experience working in UI/UX Design.</p>
-          <p>My current position is a UX Designer at Bullhorn working on TempBuddy, a workforce management application, and Bullhorn Time and Expense.</p>
+          <p>I am an NYC based UX Designer and Tufts CS alum with 2 years of professional experience working in UI/UX design and research.</p>
+          <p>My current position is a UX Designer at LogicMonitor working on Resources, Services, and Synthetics which make up the largest parts of our monitoring platform.</p>
           <p>I have a strong technical background in addition to my UX experience, and seek to find creative solutions to everyday design problems.</p>
         </div>
       </div>
