--- a/index.html
+++ b/index.html
@@ -64,21 +64,6 @@
     <div class="row">
       <div class="portfolio-items">
         
-<!--         <div class="col-sm-6 col-md-4 adipiscing">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/Breakfast.pdf" title="Breakfast Table" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <div class="overlay-caption">
-                  <div class="overlay-content">
-                    <h4>Breakfast Table</h4>
-                    <h4>Given a dataset, I designed a table for breakfast food recommendations focused for people recovering from eating disorders.</h4>
-                  </div>
-                </div>
-              </div>
-              <img src="img/portfolio/Breakfast Table.png" class="img-responsive" alt="Breakfast Table"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 lorem"> -->
           <div class="col-sm-6 col-md-4 adipiscing">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/BTE.pdf" title="Bullhorn Time & Expense" data-lightbox-gallery="gallery1">
@@ -86,7 +71,7 @@
                 <div class="overlay-caption">
                   <div class="overlay-content">
                     <h4>Bullhorn Time & Expense</h4>
-                    <h4>I am the lead designer and researcher for Bullhorn Time & Expense team.</h4>
+                    <h4>I was the lead designer and researcher for Bullhorn Time & Expense team.</h4>
                   </div>
                 </div>
               </div>
@@ -114,40 +99,25 @@
                 <div class="overlay-caption">
                   <div class="overlay-content">
                     <h4>TempBuddy</h4>
-                    <h4>I work as the lead UX designer for the workforce management platform.</h4>
+                    <h4>I worked as the lead UX designer for the workforce management platform.</h4>
                   </div>
                 </div>
               </div>
               <img src="img/portfolio/TB.png" class="img-responsive" alt="TempBuddy"> </a> </div>
           </div>
         </div>
-      </div> 
-        <div class="col-sm-6 col-md-4 adipiscing">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/petme.pdf" title="pet.me" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <div class="overlay-caption">
-                  <div class="overlay-content">
-                    <h4>pet.me</h4>
-                    <h4>I designed a pet cam mobile app for iOS.</h4>
-                  </div>
-                </div>
-              </div>
-              <img src="img/portfolio/petme.png" class="img-responsive" alt="petme"> </a> </div>
-          </div>
-        </div>
         <div class="col-sm-6 col-md-4 lorem">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/Roomie.pdf" title="Roomie" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/Alert Tuning.pdf" title="Alert Tuning" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
                     <h4>Roomie</h4>
-                    <h4>I designed the initial UI for a tenant portal website.</h4>
+                    <h4>A presentation of the design work I did for Alert Tuning at LogicMonitor.</h4>
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/Roomie.png" class="img-responsive" alt="Roomie"> </a> </div>
+              <img src="img/portfolio/LM_Logo.png" class="img-responsive" alt="Alert Tuning"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 lorem">
