--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>Roomie</h4>
+                    <h4>Alert Tuning</h4>
                     <h4>A presentation of the design work I did for Alert Tuning at LogicMonitor.</h4>
                   </div>
                 </div>
