--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
     </div>
   </div>
 </div>
+
+<!-- Spacer -->
+<div>
+<h4> </h4>
+</div>
             
 <!-- Personal Projects Section -->
 <div id="personal">
