--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/SandC.png" class="img-responsive" alt="Sales and Compensation Tool"> </a> </div>
+              <img src="img/portfolio/LM.png" class="img-responsive" alt="Sales and Compensation Tool"> </a> </div>
           </div>
         </div>
           
@@ -145,7 +145,7 @@
 
 <!-- Spacer -->
 <div>
-<h4> </h4>
+<hr width=”100%″>
 </div>
             
 <!-- Personal Projects Section -->
