--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </div>
         </div>
           
-        <div class="col-sm-6 col-md-4 lorem">
+        <div class="col-sm-6 col-md-4 adipiscing">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/CDO.pdf" title="Cisco Defence Orchestrator" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -145,7 +145,6 @@
 
 <!-- Spacer -->
 <div>
-<hr width=”100%″>
 </div>
             
 <!-- Personal Projects Section -->
