--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/LM_Logo.png" class="img-responsive" alt="Alert Tuning"> </a> </div>
+              <img src="img/portfolio/LM.png" class="img-responsive" alt="Alert Tuning"> </a> </div>
           </div>
         </div>
           
-          <div class="col-sm-6 col-md-4 adipiscing">
+          <div class="col-sm-6 col-md-4 lorem">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/BTE.pdf" title="Bullhorn Time & Expense" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -120,11 +120,11 @@
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/LM.png" class="img-responsive" alt="Sales and Compensation Tool"> </a> </div>
+              <img src="img/portfolio/SandC.png" class="img-responsive" alt="Sales and Compensation Tool"> </a> </div>
           </div>
         </div>
           
-        <div class="col-sm-6 col-md-4 adipiscing">
+        <div class="col-sm-6 col-md-4 lorem">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/CDO.pdf" title="Cisco Defence Orchestrator" data-lightbox-gallery="gallery1">
               <div class="hover-text">
