--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
     </div>
   </div>
 </div>
+    
+<!-- Space Between Sections -->
+</br>
+</br>
+</br>
             
 <!-- Personal Projects Section -->
 <div id="personal">
