--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -7,34 +7,31 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<!-- Favicons
-    ================================================== -->
+
+    ================================================== 
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
 
-<!-- Bootstrap -->
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
 
-<!-- Stylesheet
-    ================================================== -->
+
 <link rel="stylesheet" type="text/css"  href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/nivo-lightbox/nivo-lightbox.css">
 <link rel="stylesheet" type="text/css" href="css/nivo-lightbox/default.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
+
+[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <![endif]
 </head>
 <body>
-<!-- Header -->
+
 <header id="header">
   <div class="intro">
     <div class="overlay">
@@ -55,7 +52,7 @@
     </div>
   </div>
 </header>
-<!-- Portfolio Section -->
+<!-- Portfolio Section
 <div id="portfolio">
   <div class="container">
     <div class="section-title">
@@ -143,7 +140,7 @@
   </div>
 </div>
     
-<!-- Space Between Sections -->
+<!-- Space Between Sections
 </br>
 </br>
 </br>
@@ -152,7 +149,7 @@
 </br>
 </br>
             
-<!-- Personal Projects Section -->
+<!-- Personal Projects Section
 <div id="personal">
   <div class="container">
     <div class="section-title">
@@ -209,7 +206,7 @@
     </div>
   </div>
 </div>
-<!-- Contact Section -->
+<!-- Contact Section 
 <div id="contact">
   <div class="container">
     <h2>About Me</h2>
@@ -239,5 +236,90 @@
 <script type="text/javascript" src="js/jqBootstrapValidation.js"></script> 
 <script type="text/javascript" src="js/contact_me.js"></script> 
 <script type="text/javascript" src="js/main.js"></script>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Refresh" content="10;URL=https://uxfol.io/dakotaleroy">
+    <meta charset="UTF-8">
+    <title>PLEASE NOTE NEW ADDRESS</title>
+    <meta name="description" content="Our site has moved to a new address. Please note the change of address." >
+ 
+    <!-- Mobile Specific Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
+ 
+    <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
+ 
+    <style>
+ 
+        body{
+            font-family: 'Noto Sans', Arial, serif;
+            font-weight: 400;
+            -webkit-font-smoothing:antialiased;
+            -moz-osx-font-smoothing:grayscale;
+            line-height: 1.618em;
+            background: #464646 url('lake.jpg') center center no-repeat fixed;
+            background-size: cover;
+        }
+        h2{
+            font-family: 'Noto Sans', Arial, serif;
+            font-weight: 700;
+            font-size:40px;
+            line-height: 1.618em;
+        }
+        section{
+            max-width:800px;
+            margin:8% auto 1em auto;
+            background-color:#222;
+            opacity: 0.8;
+            filter: alpha(opacity=80); /* For IE8 and earlier */
+            color:#fff;
+            padding:1em 5%;
+        }
+ 
+        a{
+            color: #00CC66;
+        }
+        a:focus{
+            outline:none;
+            outline-offset:inherit;
+        }
+        @media (max-device-width: 1027px) {
+ 
+            body{
+                text-align:center;
+                font-size:larger;
+            }
+            section{
+                max-width: 90%;
+            }
+ 
+        }
+ 
+        @media (max-device-width: 640px) {
+            section{
+                max-width: 97%;
+            }
+ 
+        }
+ 
+ 
+    </style>
+</head>
+<body>
+ 
+<section>
+    <h2>My site has moved!</h2>
+ 
+    <h3>The new web address for my page is <a href="https://uxfol.io/dakotaleroy">https://uxfol.io/dakotaleroy>/a></h3>
+    <h3>...You will be transferred to the new site in a moment...</h3>
+ 
+    <p>If you have waited more than a few seconds and you are still seeing this message, please click on the link above! Thank you.</p>
+</section>
+ 
 </body>
 </html>
