--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 <section>
     <h2>My site has moved!</h2>
  
-    <h3>The new web address for my page is <a href="https://uxfol.io/dakotaleroy">https://uxfol.io/dakotaleroy>/a></h3>
+    <h3>The new web address for my page is <a href="https://uxfol.io/dakotaleroy">https://uxfol.io/dakotaleroy</a></h3>
     <h3>...You will be transferred to the new site in a moment...</h3>
  
     <p>If you have waited more than a few seconds and you are still seeing this message, please click on the link above! Thank you.</p>
