--- a/index.html
+++ b/index.html
@@ -240,13 +240,18 @@
 </html> -->
 
 
-<!DOCTYPE html>
-<html>
-   <head>
-      <title>Redirecting</title>
-      <meta http-equiv = "refresh" content = "2; url = www.dakotaleroy.com" />
-   </head>
-   <body>
-      <p>Redirecting to new site</p>
-   </body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=http://dakotaleroy.com">
+        <script type="text/javascript">
+            window.location.href = "http://dakotaleroy.com"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='http://dakotaleroy.com'>link.</a>.
+    </body>
 </html>
